# knowledge-graph-system

./: .env.example  .gitignore  CONTEXT-MAP.md  CONTEXT.md  README.md  TODO.md  example.py  main.py  pyproject.toml
config/: config.yaml
data/: chunk_budget_validation.json  chunking_benchmark.json
data/ontology/: ontology.ttl
docs/: Benchmark.md  GUI_API_PLAN.md  GUI_IMPLEMENTATION_PLAN.md  HONING.md  INFOMODEL.md  ONTOLOGY.md  PROMPT_TUNING.md  TUNING_METRICS.md
gui/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
input/: AgenticAI.txt  DM_manifesto.txt  Hamlet.txt  MCP.txt  Skills_description.txt  ZDU_prereqs.txt  industrial_revolution.txt
prompts/: README.md
reasoning/: CONTEXT.md  README.md
samples/: Bloodrelatives.owl  Bloodrelatives_individuals.ttl
scripts/: benchmark_chunking.py  chunk_yield.py  run_chunk_diagnostic.py  start-dev.sh  start_dev.py  validate_chunk_budget.py
src/: __init__.py
test/: test_api_benchmark.py  test_api_jobs.py  test_api_normalize.py  test_api_ontology.py  test_benchmark.py  test_chunking.py  test_config_overrides.py  test_document_pipeline.py  test_html_markup.py  test_llm_config.py  test_llm_errors.py  test_markup_link.py  test_ontology_integration.py  test_prompt_store.py  test_services_benchmark_sql.py  test_services_cancel.py  test_services_health.py  test_services_jobs.py  test_services_parallel.py  test_services_pipeline.py  test_services_progress.py  test_sub_taxonomy.py  test_token_usage.py  test_ttl_to_html.py  test_turtle_generation.py  test_upgrade.py  test_wikidata_client.py
(+143 files in other folders)
