[project]
name = "knowledge-graph-system"
version = "0.1.0"
description = "A standalone system for generating and managing knowledge graphs from documents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rdflib>=6.0.0",
    "flask>=2.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.9.0",
    "python-docx>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

